[project]
name = "greeting-agent"
version = "0.1.0"
description = "A simple LangGraph greeting agent without LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langsmith>=0.4.58",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greeting_agent"]

[dependency-groups]
dev = [
    "langgraph-cli>=0.4.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
